adding the   view usr deatails  functionali  on  ferontend and addingthe   functionalities re;ated to vehicle
